--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.82.1",
+    "@reduxjs/toolkit": "^2.10.1",
     "nativewind": "^4.2.1",
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-worklets": "^0.6.1",
+    "react-redux": "^9.2.0",
     "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
