--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.82.1",
+    "@react-navigation/bottom-tabs": "^7.8.6",
+    "@react-navigation/drawer": "^7.7.4",
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/native-stack": "^7.7.0",
     "@reduxjs/toolkit": "^2.10.1",
@@ -23,9 +25,11 @@
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-bootsplash": "^6.3.11",
+    "react-native-gesture-handler": "^2.29.1",
     "react-native-keychain": "^10.0.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
+    "react-native-svg": "^15.15.0",
     "react-native-worklets": "^0.6.1",
     "react-redux": "^9.2.0",
     "tailwindcss": "^3.4.18"
